# E-learning-Rust-Server

./: .env  Cargo.toml  diesel.toml
migrations/2025-03-20-115254_users/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
src/app_users/: create_app_user.rs  mod.rs  read_app_user.rs  update_app_user.rs
src/connection/: connection.rs
src/email/: email.rs
src/hash_password/: hash_password.rs  mod.rs  verify_password.rs
src/test/: mod.rs  test_file1.rs
src/totp_verification/: mod.rs  totp_verification_one.rs
