[package]
name = "E-learningCargo"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.1"
actix-multipart = "0.7.2"
actix-web = "4.10.2"
argon2 = "0.5.3"
chrono = { version="0.4.40", features=["serde"]}
diesel = { version="2.2.8", features=["chrono", "postgres"]}
dotenvy = "0.15.7"
serde = { version="1.0.219", features=["derive"]}
serde_json = "1.0.140"
