[package]
name = "e-learning_cargo"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.1"
actix-multipart = "0.7.2"
actix-web = "4.10.2"
chrono = { version="0.4.40", features=["serde"]}
diesel = { version="2.2.8", features=["chrono", "postgres"]}
dotenvy = "0.15.7"
rand_core = { version = "0.9.3", features = ["std"] }
serde = { version="1.0.219", features=["derive"]}
serde_json = "1.0.140"
rust-argon2 = "2.1.0"
